# sr-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: quickstart.py
srma/: __init__.py  screening.py  utils.py
tests/: test_screening.py  test_utils.py
tests/fixtures/: sample_pubmed.csv
